fix: movie component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
 import Layout from "@layouts/Layout.astro";
 import Main from "@components/Main";
+import Movies from "@components/Movies";
 ---
 
 <Layout title="Astro-Wars">
   <Main client:load />
+  <Movies client:load />
 </Layout>
